<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 <string name="app_name">RedGreen</string>
 <string name="not_implemented">Feature Not Implemented.</string>
 <string name="exit_text">Do you want to quit RedGreen ?</string>
 <string name="thanx_for_using_redGreen">Thank you for using RedGreen</string>
 <string name="notification_dialog_txt">Notification Settings</string>
 <string name="error_copying_database">Error while coping the database:</string>
 <string name="cancel">Cancel</string>
 <string name="applock_texttt">You are using Android Version 5.0 and above.
        Please add RedGreen to Apps with Usage Access in Settings / Security. Thanks</string>
 <string name="facebook_app_id">1093212714056747</string>
 <string name="splash_screen">SplashScreen Activity</string>
 <string name="splash_screen_navigate">Navigating To Home Activity</string>
 <string name="splash_screen_entered">Splash Screen - Entered</string>
 <string name="splash_screen_inserting_apps">Splash screen - Inserting all installed Apps </string>
 <string name="home_type_grid">HomeScreen-GridView</string>
 <string name="home_type_grid_navigate">Navigating to Home Screen-GridView</string>
 <string name="home_type_list">HomeScreen-ListView</string>
 <string name="home_type_list_navigate">Navigating to Home Screen-ListView</string>
 <string name="notifications_activity">Notifications Activity</string>
 <string name="notifications_activity_navigate">Navigating to Notifications Activity</string>
 <string name="rate_us_google_play_dialog">Rate Us On Google Play</string>
 <string name="rate_us_google_play_dialog_navigate">Navigating to Rate Us on Google Play</string>
 <string name="recommend_us_activity">Recommend Us Activity</string>
 <string name="recommend_us_activity_navigate">Navigating to Recommend Us Activity</string>
 <string name="saving_so_far_dialog">Savings So Far</string>
 <string name="saving_so_far_dialog_navigate">Navigating to Savings So Far</string>
 <string name="about_us_page">AboutUs</string>
 <string name="about_us_page_navigate">Navigating to AboutUs</string>
 <string name="home_screen">Home Screen</string>
 <string name="home_screen_about_us_displayed">Home screen - AboutUs Activity displayed</string>
 <string name="home_screen_about_us_terms_conditions_exit">Home screen - AboutUs Terms and Conditions Exit </string>
 <string name="home_screen_about_us_terms_conditions_displyed">Home screen - AboutUs Terms and Conditions displayed</string>
 <string name="home_screen_rate_us_dialogue_diaplayed">Home screen - Rate Us dialogue displayed </string>
 <string name="home_screen_savingsofar_dialogue_diaplayed">Home screen - Saving So far dialogue displayed</string>
 <string name="home_screen_notification_dialogue_diaplayed">Home screen - Notification dialogue displayed </string>
 <string name="home_screen_applock_usagestates_dialogue_displad">Home Screen - App Lock Usage states Dialogue entered</string>
 <string name="home_screen_appmanager_usagestates_dialogue_displad">Home Screen - App Manager Usage states Dialogue entered</string>
 <string name="home_screen_get_storage_details">Home screen - Getting ROM/Storage details</string>
 <string name="sorting_dialog_done_button">Sorting done as per user requirement</string>
 <string name="app_lock_screen">App Lock Activity</string>
 <string name="app_lock_screen_navigate">Navigating to AppLock Activity</string>
 <string name="set_newpassword_cancel">Set New Password Screen</string>
 <string name="set_newpassword_cancel_button">Closing The Set New Password Screen </string>
 <string name="set_newpassword_confirm">Set New Password Screen</string>
 <string name="change_lock">Change Lock</string>
 <string name="change_lock_navigate">To change the app lock password </string>
 <string name="app_lock">App Lock</string>
 <string name="app_lock_button">It Locks All The Apps </string>
 <string name="app_unlock">App Un Lock</string>
 <string name="app_unlock_button">It Un Locks All The Apps </string>
 <string name="set_email_activity">Set Email Activity</string>
 <string name="set_email_activity_done_button">Gets user Mail Id, AppLock Password and Device Id</string>
 <string name="app_lock_set_for_applications">App Lock - Lock Screen Set for Applications</string>
 <string name="app_lock_forgot_password_sent_email">App Lock - Forgot password sent to Email</string>
 <string name="app_lock_deep_linking">App Lock - Deep Linking navigate to Home activity</string>
 <string name="app_lock_pin_success_applist">App Lock - Lock PIN Successfully opened navigate to Apps List</string>
 <string name="app_lock_appslist_ext_time">App Lock - Lock Set for Applications Screen ExitTime </string>
 <string name="app_lock_set_pin">Set App lock Pin entered</string>
 <string name="app_lock_set_pin_exit">Set AppLock pin screen Exit</string>
 <string name="app_lock_next_button">Set AppLock pin next button</string>
 <string name="app_lock_enter_pin_screen">App Lock Enter password Screen to enter PIN</string>
 <string name="applock_set_email_exit">App Lock Set Email Screen ExitTime </string>
 <string name="setting_dialog_done_button">Save Battery Setting done as per user requirement</string>
 <string name="battery_save_click_function">Save Battery button Functionality Done</string>
 <string name="save_battery_activity">Save Battery Activity</string>
 <string name="save_battery_activity_navigate">Navigating to Save Battery Activity</string>
 <string name="battery_save_dialog_navigate">Save Battery Saving Dialog Closed</string>
 <string name="save_battery_sorting_dialogue_entered">Save Battery - Save Battery Sorting entered</string>
 <string name="save_battery_system_apps_selected">Save Battery - System apps are selected</string>
 <string name="save_battery_apps_selected">Save Battery - Apps are selected </string>
 <string name="save_battery_cpu_apps_selected">Save Battery - Cpu Cooling apps are selected</string>
 <string name="save_battery_exit_time">Save Battery - Save Battery ExitTime</string>
 <string name="auto_speed_booster_dialog_settings">Auto Speed Booster Settings Dialog</string>
 <string name="auto_speed_booster_dialog_settings_done">Saving settings as per user requirement for Auto Speed Boosting</string>
 <string name="auto_speed_booster_dialog_settings_switch">Enables repeat options in Auto Speed Booster Settings Dialog</string>
 <string name="auto_speed_dialog">Auto Speed Booster Dialog</string>
 <string name="auto_speed_dialog_navigate">Navigating to Auto Speed Booster Dialog Box</string>
 <string name="clean_memory_activity">Clean Memory Activity</string>
 <string name="clean_memory_activity_navigate">Navigating to Clean Memory Activity</string>
 <string name="speed_booster_dialog">Speed Booster Dialog</string>
 <string name="speed_booster_dialog_button">Speed Booster Dialog Functionality Will Be Closed</string>
 <string name="speed_booster_setting_dialog">Boost Schedule Automatically</string>
 <string name="speed_booster_by_memory_dialog">Boost Schedule Based On Memory Automatically</string>
 <string name="speed_booster_memory_based_dialog_title">Boost Schedule Automatically By Memory Dialog</string>
 <string name="speed_booster_setting_dialogr_dialog_button">Opens Automatically Boost Scheule Window </string>
 <string name="speed_booster_by_memory_dialogr_dialog_button">Opens Automatically Boost Scheule By Memory Dialog Will be Open </string>
 <string name="speed_booster_memory_based_dialog_close"> Boost Schedule Automatically By Memory Dialog Will be Closed</string>
 <string name="automatically_boost_memory">Automatically Boost Memory Dialog</string>
 <string name="automatically_boost_memory_dialog_button">Perform Automatically Boost Memory As Per Requirement </string>
 <string name="save_battery">Save Battery</string>
 <string name="savebattery_system_apps">System</string>
 <string name="savebattery_installed_apps">Apps</string>
 <string name="savebattery_cpucooling">CPU Cooler</string>
 <string name="savebattery_system_apps_empty">System Apps List Is Empty</string>
 <string name="savebattery_installed_apps_empty">Apps List Is Empty</string>
 <string name="savebattery_cpucooling_empty">CPU Cooler List Is Empty</string>
 <string name="battery_saved_by">Battery Saved By</string>
 <string name="battery_saved_by_timeout"> \u2022 Screen Timeout</string>
 <string name="battery_saved_by_shtting_downprocess"> \u2022 Shutting Down Processes</string>
 <string name="battery_saved_by_approx_battery">Approximate Battery Savings</string>
 <string name="battery_saved_by_cpu_temp">CPU Temperature Reduced</string>
 <string name="save_battery_setting_dialog_title">Display Temperature in</string>
 <string name="save_battery_fahrenheit">Fahrenheit</string>
 <string name="save_battery_celcius">Celsius</string>
 <string name="title_menu_fahrenheit">Fahrenheit</string>
 <string name="title_menu_celsius">Celsius</string>
 <string name="batterysorting">batterySorting</string>
 <string name="batterysetting">batterySetting</string>
 <string name="cpuCoolerTemp">cpuCoolerTeperature</string>
 <string name="dialog_txt">Automatically Uninstall Apps not Used for</string>
 <string name="week">1 Week</string>
 <string name="days">15 Days</string>
 <string name="month">1 Month</string>
 <string name="we_detected">We detected..</string>
 <string name="noappspresent">No Apps To Uninstall</string>
 <string name="uninsatall_apps">Uninstall</string>
 <string name="do_not_delete_apps">Move to Do Not Delete Apps List</string>
 <string name="ask_before_delete">Ask Before Deleting</string>
 <string name="repeat">Repeat</string>
 <string name="auto_clean">App Manager - Automatic Settings</string>
 <string name="title_activity_donot_delete_apps">Do Not Delete Apps</string>
 <string name="on">ON</string>
 <string name="off">OFF</string>
 <string name="cleanAppSorting">cleanAppSorting</string>
 <string name="cleanAppSortingType">cleanAppSortingtype</string>
 <string name="nav_change">Change App Lock Password</string>
 <string name="apps_menu_sort">Sort</string>
 <string name="apps_menu_lock_all">Lock all</string>
 <string name="apps_menu_unlock_all">Unlock all</string>
 <string name="menu_settings">Settings</string>
 <string name="num1">1</string>
 <string name="num2">2</string>
 <string name="num3">3</string>
 <string name="num4">4</string>
 <string name="num5">5</string>
 <string name="num6">6</string>
 <string name="num7">7</string>
 <string name="num8">8</string>
 <string name="num9">9</string>
 <string name="num0">0</string>
 <string name="confirm">Confirm</string>
 <string name="dialog_txt_speed_boost">Automatically Boost Memory Every</string>
 <string name="dialog_txt_weekly">Weekly</string>
 <string name="dialog_txt_bi_weekly">Bi-Weekly</string>
 <string name="dialog_txt_monthly">Monthly</string>
 <string name="dialog_txt_sunday">Sunday</string>
 <string name="dialog_txt_monday">Monday</string>
 <string name="dialog_txt_tuesday">Tuesday</string>
 <string name="dialog_txt_wednusday">Wednesday</string>
 <string name="dialog_txt_thursday">Thursday</string>
 <string name="dialog_txt_friday">Friday</string>
 <string name="dialog_txt_saturday">Saturday</string>
 <string name="done">Done</string>
 <string name="time">Time</string>
 <string name="ok">OK</string>
 <string name="rate_dialog_message_part1">Hi, Please take a minute to rate </string>
 <string name="rate_dialog_message_part2">and help us to improve.</string>
 <string name="rate_dialog_title">Rate </string>
 <string name="rate_dialog_rate_now">Rate Now</string>
 <string name="rate_dialog_later">Later</string>
 <string name="rate_dialog_no_thanks">No, thanks</string>
 <string name="your_saving_so_far">Your Savings Last Month :</string>
 <string name="null_gb">0 : 00 MB</string>
 <string name="Cache">Storage/ROM\u0020\u0020:\u0020</string>
 <string name="ram_cleaned">Memory/RAM\u0020:\u0020</string>
 <string name="last_cleaned_date">Last Cleaned On : </string>
 <string name="null_date">00 : 00 : 00</string>
</resources>