<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:padding="@dimen/ten_dp" >

        <TextView
            android:id="@+id/tv_dialog_simple_header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
              android:layout_gravity="center_vertical"
            android:text="@string/rate_dialog_title"
            android:textColor="@color/app_lock_green"
            android:textSize="@dimen/eighteen_sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/eight_dp"
            android:src="@drawable/actionbar_logo" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_dp"
        android:background="@android:color/holo_green_dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/ten_dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/rate_dialog_message_part1"
                android:textSize="@dimen/fifteen_sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/eight_dp"
                android:gravity="center"
                android:src="@drawable/actionbar_logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/rate_dialog_message_part2"
                android:textSize="@dimen/fifteen_sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_dp"
        android:background="@android:color/holo_green_dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/no_thanks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/ten_dp"
            android:text="@string/rate_dialog_no_thanks"
            android:textSize="@dimen/fifteen_sp" />

        <TextView
            android:layout_width="@dimen/one_dp"
            android:layout_height="match_parent"
            android:background="@android:color/holo_green_dark" />

        <TextView
            android:id="@+id/later"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/ten_dp"
            android:text="@string/rate_dialog_later"
            android:textSize="@dimen/fifteen_sp" />

        <TextView
            android:layout_width="@dimen/one_dp"
            android:layout_height="match_parent"
            android:background="@android:color/holo_green_dark" />

        <TextView
            android:id="@+id/rate_now"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/ten_dp"
            android:text="@string/rate_dialog_rate_now"
            android:textSize="@dimen/fifteen_sp" />
    </LinearLayout>

</LinearLayout>